[package]
name = "akatsuki-pp"
version = "1.1.1"
edition = "2021"
authors = ["MaxOhn <ohn.m@hotmail.de>", "tsunyoku <tsunyoku@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/osuAkatsuki/akatsuki-pp-rs"
description = "Difficulty and performance calculation for osu!"
keywords = ["osu", "pp", "stars", "performance", "difficulty"]

[features]
default = ["compact_strains"]
compact_strains = []
sync = []
tracing = ["rosu-map/tracing"]

[dependencies]
rosu-map = { version = "0.1.1" }
rosu-mods = { version = "0.1.0" }
